# autd3-library-software

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  LICENSE  NOTICE  README.md  annotated.html  arrayfire__backend_8hpp.html  arrayfire__backend_8hpp__incl.md5  arrayfire__backend_8hpp_source.html  autd3_8hpp.html  autd3_8hpp__incl.map  autd3_8hpp__incl.md5  autd3_8hpp_source.html  autd__types_8hpp.html  autd__types_8hpp__dep__incl.map  autd__types_8hpp__dep__incl.md5  autd__types_8hpp_source.html  backend_8hpp.html  backend_8hpp__incl.map  backend_8hpp__incl.md5  backend_8hpp_source.html  blas__backend_8hpp.html  blas__backend_8hpp__incl.map  blas__backend_8hpp__incl.md5  blas__backend_8hpp_source.html  changelog  changelog.md  classautd_1_1Configuration-members.html  classautd_1_1Configuration.html  classautd_1_1Controller-members.html  classautd_1_1Controller.html  classautd_1_1Controller_1_1STMController-members.html  classautd_1_1Controller_1_1STMController.html  classautd_1_1FirmwareInfo-members.html  classautd_1_1FirmwareInfo.html  classautd_1_1FirmwareInfo_a71bcb7ac4b06c9101d5cb9873ff95925_icgraph.map  classautd_1_1Geometry-members.html  classautd_1_1Geometry.html  (+867 more)
client/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  SetTargetx64.bat  build.bat  build.ps1  build_test.bat  build_vs2019.bat  build_x86.bat  check.ps1  readme.md
client/autdsoem/: CMakeLists.txt  autdsoem.cpp  libsoem.cpp
client/autdunity/: .gitignore  autd3.unitypackage  readme.md
client/autdunity/ProjectSettings/: ProjectSettings.asset
client/capi/: CMakeLists.txt  autd3_c_api.h  c_api.cpp  wrapper.hpp
client/capi/base/: CMakeLists.txt  autd3_c_api.h  c_api.cpp  custom.hpp  header.h  wrapper.hpp  wrapper_gain.hpp  wrapper_link.hpp  wrapper_modulation.hpp  wrapper_sequence.hpp
client/capi/emulator_link/: CMakeLists.txt  c_api.cpp  emulator_link.h
client/capi/example/: CMakeLists.txt  emulator.c  remote_twincat.c  runner.h  soem.c  twincat.c
client/capi/from_file_modulation/: CMakeLists.txt  c_api.cpp  from_file_modulation.h
client/capi/gain_holo/: CMakeLists.txt  c_api.cpp  gain_holo.h
client/capi/gain_primitive/: CMakeLists.txt  c_api.cpp  gain_primitive.h
client/capi/holo_gain/: CMakeLists.txt  c_api.cpp  holo_gain.h  wrapper_backend.hpp
client/capi/link_emulator/: CMakeLists.txt  c_api.cpp  emulator_link.h
client/capi/link_soem/: CMakeLists.txt  c_api.cpp  soem_link.h
client/capi/link_twincat/: CMakeLists.txt  c_api.cpp  twincat_link.h
client/capi/modulation_from_file/: CMakeLists.txt  c_api.cpp  modulation_from_file.h
client/capi/modulation_primitive/: CMakeLists.txt  c_api.cpp  modulation_primitive.h
client/capi/remote_twincat_link/: CMakeLists.txt  c_api.cpp  remote_twincat_link.h
client/capi/sequence_primitive/: CMakeLists.txt  c_api.cpp  sequence_primitive.h
client/capi/soem_link/: CMakeLists.txt  autd3_c_api_soem_link.h  c_api.cpp  soem_link.h
client/capi/twincat_link/: CMakeLists.txt  c_api.cpp  twincat_link.h
client/cmakes/: arm32.cmake  arm64.cmake  linux.cmake  mac.cmake  win_vs.cmake
client/csharp/: AUTD3Sharp.cs  CMakeLists.txt  CustomDictionary.xaml  GlobalSuppressions.cs  NativeMethods.cs
client/csharp/Util/: GainMap.cs  Matrix3x3f.cs  Quaterniond.cs  Quaternionf.cs  Vector3d.cs  Vector3f.cs
client/csharp_example/: CMakeLists.txt  Program.cs
client/csharp_example/Test/: BesselExample.cs  BesselTest.cs  GroupedGainExample.cs  HoloGainExample.cs  HoloGainTest.cs  LateralExample.cs  LateralTest.cs  STMExample.cs  SimpleExample.cs  SimpleExample_SOEM.cs  SimpleTest.cs
client/csharpdll/: CMakeLists.txt  c_api.cpp
client/doc/: CMakeLists.txt  Doxyfile.in  main_page.md
client/example/: CMakeLists.txt  simple.cpp
client/example_emulator/: CMakeLists.txt  simple_emulator.cpp
client/example_soem/: CMakeLists.txt  simple_soem.cpp
client/examples/: CMakeLists.txt  debug.cpp  emulator.cpp  remote_twincat.cpp  runner.hpp  soem.cpp  twincat.cpp
client/examples/examples/: advanced.hpp  bessel.hpp  delay.hpp  group.hpp  holo.hpp  mod_from_file.hpp  runner.hpp  seq.hpp  seq_gain.hpp  simple.hpp  stm.hpp  trans_test.hpp
client/gain/gain_primitive/: CMakeLists.txt  primitive_gain.cpp
client/gain/holo/: CMakeLists.txt  holo.cpp  linalg_backend.cpp
client/gain/holo_gain/: CMakeLists.txt  holo_gain.cpp
client/holo_gain/: CMakeLists.txt  eigen_backend.cpp  eigen_backend.hpp  holo_gain.cpp
client/include/: autd3.hpp  autd3_c_api.h  autd_types.hpp  autdsoem.hpp  configuration.hpp  consts.hpp  controller.hpp  convert.hpp  core.hpp  debug_link.hpp  eigen_backend.hpp  emulator_link.hpp  ethercat_link.hpp  firmware_version.hpp  gain.hpp  geometry.hpp  holo_gain.hpp  libsoem.hpp  linalg.hpp  linalg_backend.hpp  link.hpp  link_soem.hpp  link_twincat.hpp  matlab_gain.hpp  modulation.hpp  primitive_gain.hpp  primitive_modulation.hpp  primitive_sequence.hpp  privdef.hpp  quaternion.hpp  result.hpp  sequence.hpp  soem_link.hpp  twincat_link.hpp  utils.hpp  vector3.hpp
client/lib/: CMakeLists.txt  autd_logic.cpp  autd_logic.hpp  autdsoem.hpp  c_api.cpp  controller.cpp  controller.hpp  controller_impl.hpp  controller_v_0_1.cpp  controller_v_0_6.cpp  controller_v_0_7.cpp  convert.hpp  core.hpp  debug_link.cpp  ec_config.hpp  emulator_link.cpp  emulator_link.hpp  ethercat_link.cpp  ethercat_link.hpp  gain.cpp  gain.hpp  geometry.cpp  geometry.hpp  grouped_gain.cpp  groupedgain.cpp  holo_gain.cpp  lateraltimer.cpp  lateraltimer.hpp  libsoem.hpp  link.cpp  link.hpp  matlab_gain.cpp  matlabgain.cpp  modulation.cpp  modulation.hpp  pre_def.hpp  primitive_gain.cpp  primitive_modulation.cpp  primitive_sequence.cpp  privdef.hpp  (+5 more)
client/lib/linux/: timer.cpp
client/libsoem/: CMakeLists.txt  libsoem.cpp
client/osal_timer/: CMakeLists.txt  timer.hpp
client/soem_link/: CMakeLists.txt  autdsoem.cpp  autdsoem.hpp  soem_link.cpp
client/tests/: CMakeLists.txt  pch.h  test.cpp  test_utils.hpp  tests.vcxproj
client/twincat_link/: CMakeLists.txt  twincat_link.cpp
future/autd/: .gitignore  Cargo.toml  readme.md
future/rusoem/: Cargo.toml  build.rs
(+2006 files in other folders)
