cmake_minimum_required(VERSION 3.1)

set (CMAKE_CXX_STANDARD 17)

add_executable(simple simple.cpp)
include_directories(../include)
target_link_libraries(simple autd3)
target_link_libraries(simple autdsoem)
if(WIN32)
    target_link_libraries(simple ws2_32.lib)
    target_link_libraries(simple winmm.lib)
elseif(APPLE)
    target_link_libraries(simple pcap)
else()
    target_link_libraries(simple rt)
endif()
