cmake_minimum_required(VERSION 3.16)

file(GLOB hpp_files examples/*.hpp runner.hpp)

if(BUILD_HOLO_GAIN)
  add_compile_definitions(BUILD_HOLO_GAIN)
endif()
if(BUILD_FROM_FILE_MODULATION)
  add_compile_definitions(BUILD_FROM_FILE_MOD)
  add_compile_definitions(AUTD3_RESOURCE_PATH="${PROJECT_SOURCE_DIR}/examples/resources")
endif()

if(BUILD_SOEM_LINK)
  add_executable(example_soem soem.cpp ${hpp_files})
  target_link_libraries(example_soem autd3)
  if(BUILD_SHARED_LIBS)
    if(WIN32)
      target_link_libraries(example_soem winmm ws2_32)
    elseif(APPLE)
      target_link_libraries(example_soem pcap)
    else()
      target_link_libraries(example_soem rt)
    endif()
  endif()
  if(WIN32)
    set_target_properties(example_soem PROPERTIES FOLDER "example")
  endif()
endif()

if(WIN32)
  if(BUILD_TWINCAT_LINK)
    add_executable(example_twincat twincat.cpp ${hpp_files})
    target_link_libraries(example_twincat autd3)
    if(BUILD_SHARED_LIBS)
      if(WIN32)
        target_link_libraries(example_twincat winmm ws2_32)
      elseif(APPLE)
        target_link_libraries(example_twincat pcap)
      else()
        target_link_libraries(example_twincat rt)
      endif()
    endif()
    if(WIN32)
      set_target_properties(example_twincat PROPERTIES FOLDER "example")
    endif()
  endif()
endif()

if(BUILD_REMOTE_TWINCAT_LINK)
  add_executable(example_remote_twincat remote_twincat.cpp ${hpp_files})
  target_link_libraries(example_remote_twincat autd3)
  if(BUILD_SHARED_LIBS)
    if(WIN32)
      target_link_libraries(example_remote_twincat winmm ws2_32)
    elseif(APPLE)
    else()
      target_link_libraries(example_remote_twincat rt)
    endif()
  endif()
  if(WIN32)
  set_target_properties(example_remote_twincat PROPERTIES FOLDER "example")
  endif()
endif()

if(BUILD_EMULATOR_LINK)
  add_executable(example_emulator emulator.cpp ${hpp_files})
  target_link_libraries(example_emulator autd3)
  if(BUILD_SHARED_LIBS)
    if(WIN32)
      target_link_libraries(example_emulator winmm ws2_32)
    elseif(APPLE)
    else()
      target_link_libraries(example_emulator rt)
    endif()
  endif()
  if(WIN32)
    set_target_properties(example_emulator PROPERTIES FOLDER "example")
  endif()
endif()
